# jet-project

./: .dockerignore  .env.example  .gitignore  Dockerfile.airflow  Makefile  README.md  docker-compose.yml  env.template  init.sql  pyproject.toml
airflow/dags/: xkcd_pipeline_dag.py
dbt/: dbt_project.yml  profiles.yml  profiles.yml.airflow  profiles.yml.example
dbt/models/marts/: _marts_schema.yml  dim_comic.sql  fct_comic_metrics.sql
dbt/models/staging/: _stg_schema.yml  schema.yml  stg_xkcd_comics.sql
dbt/tests/: assert_cost_calculation.sql  assert_review_score_range.sql  assert_views_range.sql
ingestion/: extractor.py  loader.py  poller.py  run_ingestion.py
ingestion/tests/: test_extractor.py  test_loader.py  test_poller.py  test_run_ingestion.py
