[project]
name = "xkcd-data-platform"
version = "0.1.0"
description = "XKCD Comic Data Ingestion Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "tenacity>=9.0.0",
    "dbt-core>=1.10.15",
    "dbt-postgres>=1.9.1",
    "protobuf>=6.0.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "sqlfluff>=3.0.0",
    "sqlfluff-templater-dbt>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["ingestion/tests"]
cache_dir = "ingestion/tests/.pytest_cache"
addopts = "--cov=ingestion --cov-report=term-missing"

[tool.coverage.run]
data_file = "ingestion/tests/.coverage"
